Renamed logger to logging
Turns out there's already another package named logger.

--- a/programs.cfg
+++ b/programs.cfg
@@ -1,9 +1,9 @@
 {
-  ["logger"] = {
+  ["logging"] = {
     files = {
-      [":master/logger"] = "/"
+      [":master/logging"] = "/"
     },
-    name = "Logger",
+    name = "Logging",
     description = "Logging library",
     authors = "Quinn Neufeld",
     hidden = true
@@ -23,7 +23,7 @@
       [":master/tabs"] = "/"
     },
     dependencies = {
-      ["logger"] = "/",
+      ["logging"] = "/",
       ["graphics"] = "/"
     },
     name = "Tabs",
